added unicodes for currencies

--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -43,16 +43,14 @@
 				<div class="col s5" id="heading">&ensp;&ensp;MARKET</div>
 				<div class="col s3 center-align flow-text white-text" id="balance"></div><br><br>
 				<a href="#" id="indian" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="indian1" style="border-radius: 10px;">BSE</div>
+					<div class="#8e24aa purple darken-1 white-text" id="indian1" style="border-radius: 10px;">BSE &nbsp; &#8377;</div>
 				</a>
 				<a href="#" id="international" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="international1" style="border-radius: 10px;">NYM
-					</div>
+					<div class="#8e24aa purple darken-1 white-text" id="international1" style="border-radius: 10px;">NYM &nbsp; &#36;</div>
 				</a>
 				<a href="#" id="japanese" class="col s4 center-align"
 					style="color: white;padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="international2" style="border-radius: 10px;">JPN
-					</div>
+					<div class="#8e24aa purple darken-1 white-text" id="international2" style="border-radius: 10px;">JPN &nbsp; &#165;</div>
 				</a>
 			</div>
 
