--- a/main/static/css/leaderboard.css
+++ b/main/static/css/leaderboard.css
@@ -13,13 +13,10 @@ body {
 }
 
 #topHeader {
-  padding: 20px;
+  padding: 15px;
+  padding-bottom: 8px;
   border-left: 2px solid black;
   border-right: 2px solid black;
-}
-
-#balance {
-  transform: scale(0.7);
 }
 
 .sidenavbar {
@@ -66,7 +63,6 @@ body {
   position: relative;
   padding: 10px;
   line-height: 45px;
-  background: black;
 }
 
 .row .col {
@@ -75,4 +71,11 @@ body {
 
 .col {
   overflow: hidden;
+  margin-bottom: 8px;
+}
+
+@media screen and (max-width: 500px) {
+  #topHeader {
+    padding-bottom: 0;
+  }
 }
