--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -51,7 +51,7 @@
     </div>
 
     <div id="mySidenav" class="sidenavbar">
-			<a class="links" href="#" style="font-size: 40px;">SMS</a>
+			<a class="links" href="/" style="font-size: 40px;">SMS</a>
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<a class="links" href='/portfolio/'>Portfolio</a>
 			<hr>
