Markets Introduced. Allauth Removed. Buy/Sell Fixes. Linting Fixes.

--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -21,7 +21,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -40,14 +41,15 @@
 		<div class="container-fluid">
 			<div class="#000000 black row" id="myDiv" style="padding: 20px">
 				<div class="col s1 white-text flow-text" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
-                <div class="col s2"></div>
-                <div class="col s6 flow-text center-align" id="heading">MARKET</div>
-                <div class="col s3 white-text center-align flow-text" style="cursor:pointer;">{{request.user.username}}</div><br><br>
+				<div class="col s2"></div>
+				<div class="col s6 flow-text center-align" id="heading">MARKET</div>
+				<div class="col s3 white-text center-align flow-text" style="cursor:pointer;">{{request.user.username}}
+				</div><br><br>
 
-                <div class="col s12 #ab47bc purple lighten-1 center-align flow-text" id="balance"></div><br><br>
+				<div class="col s12 #ab47bc purple lighten-1 center-align flow-text" id="balance"></div><br><br>
 
 
-<!-- 				<div class="col s1 white-text flow-text" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
+				<!-- 				<div class="col s1 white-text flow-text" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
                 <div class="col s2" onclick=""></div>
                 <div class="col s6 flow-text center-align" id="heading">PORTFOLIO</div>
                 <div class="col s3 white-text center-align flow-text" style="cursor:pointer;">{{request.user.username}}</div><br><br>
@@ -59,22 +61,27 @@
 
 
 
-				<a href="#" id="indian" class="col s4 center-align butn activeLink" style="padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="indian1" style="border-radius: 10px;">BSE &nbsp; &#8377;</div>
+				<a href="#" id="indian" class="col s4 center-align butn activeLink"
+					style="padding: 5px;border-radius:10px;">
+					<div class="#8e24aa purple darken-1 white-text" id="indian1" style="border-radius: 10px;">BSE &nbsp;
+						&#8377;</div>
 				</a>
-				<a href="#" id="international" class="col s4 center-align butn" style="padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="international1" style="border-radius: 10px;">NYM &nbsp; &#36;</div>
+				<a href="#" id="international" class="col s4 center-align butn"
+					style="padding: 5px;border-radius:10px;">
+					<div class="#8e24aa purple darken-1 white-text" id="international1" style="border-radius: 10px;">NYM
+						&nbsp; &#36;</div>
 				</a>
 				<a href="#" id="japanese" class="col s4 center-align butn"
 					style="color: white;padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="international2" style="border-radius: 10px;">JPN &nbsp; &#165;</div>
+					<div class="#8e24aa purple darken-1 white-text" id="international2" style="border-radius: 10px;">JPN
+						&nbsp; &#165;</div>
 				</a>
 			</div>
 
 			<div class="container">
 				<div class="row #ab47bc purple lighten-1 hoverable z-depth-2">
-					<div class="col s4 center-align flow-text white-text"
-						style="font-family: 'Raleway', sans-serif;">STOCK NAME</div>
+					<div class="col s4 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
+						STOCK NAME</div>
 					<div class="col s4 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
 						STOCK PRICE
 					</div>
