Model Rectified. Gtag added

--- a/main/templates/main/leaderboard.html
+++ b/main/templates/main/leaderboard.html
@@ -3,6 +3,16 @@
     {% load static %}
 
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121963281-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-121963281-2');
+        </script>
+
         <title>SMS 2019</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="{% static 'css/loader.css' %}">
