--- a/main/templates/main/user_forgot_password.html
+++ b/main/templates/main/user_forgot_password.html
@@ -2,6 +2,16 @@
   {% load staticfiles %}
 
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121963281-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-121963281-2');
+    </script>
+
     <meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SMS 2019</title>
