--- a/main/static/css/leaderboard.css
+++ b/main/static/css/leaderboard.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -70,7 +70,7 @@ body {
 }
 
 .col {
-  overflow: hidden;
+  overflow-x: hidden;
   margin-bottom: 8px;
 }
 
