--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -63,9 +63,11 @@
         <div id="mySidenav" class="sidenavbar">
             <a class="links" href="/" style="font-size: 40px;">SMS</a>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a class="links" href='/portfolio/'>Portfolio</a>
+            <a class="links" href='/instructions/'>Instructions</a>
             <hr>
             <a class="links" href='/'>Market</a>
+            <hr>
+            <a class="links" href='/portfolio/'>Portfolio</a>
             <hr>
             <a class="links" href='/display_leaderboard'>Leaderboard</a>
             <hr>
