--- a/main/templates/main/instructions.html
+++ b/main/templates/main/instructions.html
@@ -18,7 +18,7 @@
 
 	<div class="container-fluid">
 		<div class="#000000 black row" id="myDiv" style="padding: 20px">
-			<div class="col s1 white-text flow-text" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
+			<div class="col s1 white-text flow-text" id="navbtn" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
 			<div class="col s2"></div>
 			<div class="col s6 flow-text center-align white-text" id="heading">INSTRUCTIONS</div>
 			<div class="col s3 white-text center-align flow-text" style="cursor:pointer;"></div>
