--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -48,7 +48,7 @@
 
         <div class="container-fluid">
             <div class="#000000 black row" id="myDiv" style="padding: 20px">
-                <div class="col s1 white-text flow-text" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
+                <div class="col s1 white-text flow-text" id="navbtn" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
                 <div class="col s2" onclick=""></div>
                 <div class="col s6 flow-text center-align" id="heading">PORTFOLIO</div>
                 <div class="col s3 white-text center-align flow-text" style="cursor:pointer;">{{request.user.username}}
