Make site idiot proof

--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -73,6 +73,7 @@
             <i class="material-icons">add</i>
           </button>
       </a></p>
+      <p>Event is not live yet. Register after 21:00 IST (Read BST)</p>
     </div>
 
     <script type="text/javascript" src="{% static 'js/login.js' %}"></script>
