--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -80,6 +80,7 @@
       <a href={% url 'user_login' %}>
         <p align="center">Head back to login
       </a></p>
+      <p>Event is not live yet. Register after 21:00 IST (Read BST)</p>
     </div>
   </body>
 
