--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -62,18 +62,18 @@
         </div>
       </div>
     </form>
-    <div class="row">
+    <div style="text-align: center;" class="row">
       <br>
       <a href={% url 'user_forgot_password' %}>
         <p align="center">Forgot Password?
       </a></p>
       <br>
-      <a href={% url 'register' %}>
+      <!-- <a href={% url 'register' %}>
         <p align="center">Haven't registered? <button class="btn-floating purple">
             <i class="material-icons">add</i>
           </button>
-      </a></p>
-      <p>Event is not live yet. Register after 21:00 IST (Read BST)</p>
+      </p> </a> -->
+      <p><h5>Event is not live yet. Register after 21:00 IST (Read BST)</h5></p>
     </div>
 
     <script type="text/javascript" src="{% static 'js/login.js' %}"></script>
