--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -68,12 +68,12 @@
         <p align="center">Forgot Password?
       </a></p>
       <br>
-      <!-- <a href={% url 'register' %}>
+      <a href={% url 'register' %}>
         <p align="center">Haven't registered? <button class="btn-floating purple">
             <i class="material-icons">add</i>
           </button>
-      </p> </a> -->
-      <p><h5>Event is not live yet. Register after 21:00 IST (Read BST)</h5></p>
+      </p> </a>
+      <!-- <p><h5>Event is not live yet. Register after 21:00 IST (Read BST)</h5></p> -->
     </div>
 
     <script type="text/javascript" src="{% static 'js/login.js' %}"></script>
