Display conversion rate on market and portfolio

--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -55,6 +55,7 @@
                 </div><br><br>
 
                 <div class="col s12 #ab47bc purple lighten-1 center-align flow-text" id="balance"></div><br><br>
+                <div class="col s12 #ab47bc purple lighten-1 center-align white-text flow-text" id="conversion">1 &#8377; = 1 &#8377;</div><br><br>
 
                 <a href="#" id="indian" class="col s4 center-align butn activeLink"
                     style="padding: 5px;border-radius:10px;">
