--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -57,6 +57,7 @@
 				</div><br><br>
 
 				<div class="col s12 #ab47bc purple lighten-1 center-align flow-text" id="balance"></div><br><br>
+				<div class="col s12 #ab47bc purple lighten-1 center-align white-text flow-text" id="conversion">1 &#8377; = 1 &#8377;</div><br><br>
 
 
 				<!-- 				<div class="col s1 white-text flow-text" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
