Make price values floatFields

--- a/main/templates/main/instructions.html
+++ b/main/templates/main/instructions.html
@@ -61,6 +61,7 @@
 			<li class="collection-item">Click on the menu button on the top left corner of the screen to navigate to the different sections (Market, Portfolio, Leaderboard and News).</li>
 			<li class="collection-item">Your current balance in Indian rupees is displayed at the top of the screen. </li>
 			<li class="collection-item">You can purchase desired number of units of a particular stock at the Market by selecting the stock and then clicking buy.</li>
+			<li class="collection-item">You cannot buy/sell more than <b>10000</b> stocks at a time.</li>	
 			<li class="collection-item">You can purchase stocks from Bombay Stock Exchange (BSE), New York Market (NYM) and Japan Stock Exchange (JPN), keeping in mind the respective currencies used.</li>
 			<li class="collection-item">The Portfolio section shows the stocks you have purchased and here is where you can either buy more units of the stock(s) you have or sell them.</li>
 			<li class="collection-item">You can view your rank in the Leaderboard section.</li>
