--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -37,7 +37,8 @@
 
         <div class="container-fluid">
             <div class="row valign-wrapper black" id="topHeader" style="padding: 10px;">
-                <div class="col s1 center-align" id="navbtn" onclick="openNav()" style="color: white;cursor:pointer;">&#9776;</div>
+                <div class="col s1 center-align" id="navbtn" onclick="openNav()" style="color: white;cursor:pointer;">
+                    &#9776;</div>
                 <div class="col s10 center-align white-text flow-text" id="heading">NEWS</div>
                 <div class="col s1 white-text flow-text" id="heading"></div>
             </div>
