--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -50,14 +50,16 @@
 
 		<div class="container-fluid">
 			<div class="#000000 black row" id="myDiv" style="padding: 20px">
-				<div class="col s1 white-text flow-text" id="navbtn" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
+				<div class="col s1 white-text flow-text" id="navbtn" onclick="openNav()" style="cursor:pointer;">&#9776;
+				</div>
 				<div class="col s2"></div>
 				<div class="col s6 flow-text center-align" id="heading">MARKET</div>
 				<div class="col s3 white-text center-align flow-text" style="cursor:pointer;">{{request.user.username}}
 				</div><br><br>
 
 				<div class="col s12 #ab47bc purple lighten-1 center-align flow-text" id="balance"></div><br><br>
-				<div class="col s12 #ab47bc purple lighten-1 center-align white-text flow-text" id="conversion">1 &#8377; = 1 &#8377;</div><br><br>
+				<div class="col s12 #ab47bc purple lighten-1 center-align white-text flow-text" id="conversion">1
+					&#8377; = 1 &#8377;</div><br><br>
 
 
 				<!-- 				<div class="col s1 white-text flow-text" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
@@ -122,17 +124,17 @@
 			<a class="links" href="/" style="font-size: 40px;">SMS</a>
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<a class="links" href='/instructions/'>Instructions</a>
-            <hr>
-            <a class="links" href='/'>Market</a>
-            <hr>
-            <a class="links" href='/portfolio/'>Portfolio</a>
-            <hr>
-            <a class="links" href='/display_leaderboard'>Leaderboard</a>
-            <hr>
-            <a class="links" href='/news'>News </a>
-            <hr>
-            <a class="links" href='/accounts/logout/'>Logout</a>
-            <hr>
+			<hr>
+			<a class="links" href='/'>Market</a>
+			<hr>
+			<a class="links" href='/portfolio/'>Portfolio</a>
+			<hr>
+			<a class="links" href='/display_leaderboard'>Leaderboard</a>
+			<hr>
+			<a class="links" href='/news'>News </a>
+			<hr>
+			<a class="links" href='/accounts/logout/'>Logout</a>
+			<hr>
 		</div>
 		</div>
 		<div id="popup">
