--- a/main/templates/main/leaderboard.html
+++ b/main/templates/main/leaderboard.html
@@ -36,10 +36,12 @@
 
         <div class="container-fluid">
             <div class="row black" id="topHeader">
-                <div class="col s1 white-text flow-text" id="navbtn" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
+                <div class="col s1 white-text flow-text" id="navbtn" onclick="openNav()" style="cursor:pointer;">&#9776;
+                </div>
                 <div class="col s2"></div>
                 <div class="col s6 flow-text center-align white-text" id="heading">LEADERBOARD</div>
-                <div class="col s3 white-text center-align flow-text" id="user-name" style="cursor:pointer;">{{request.user.username}}
+                <div class="col s3 white-text center-align flow-text" id="user-name" style="cursor:pointer;">
+                    {{request.user.username}}
                 </div><br>
 
                 <div class="col s12 #ab47bc purple lighten-1 white-text center-align flow-text" id="balance"></div>
