--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -48,14 +48,16 @@
 
         <div class="container-fluid">
             <div class="#000000 black row" id="myDiv" style="padding: 20px">
-                <div class="col s1 white-text flow-text" id="navbtn" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
+                <div class="col s1 white-text flow-text" id="navbtn" onclick="openNav()" style="cursor:pointer;">&#9776;
+                </div>
                 <div class="col s2" onclick=""></div>
                 <div class="col s6 flow-text center-align" id="heading">PORTFOLIO</div>
                 <div class="col s3 white-text center-align flow-text" style="cursor:pointer;">{{request.user.username}}
                 </div><br><br>
 
                 <div class="col s12 #ab47bc purple lighten-1 center-align flow-text" id="balance"></div> <br> <br>
-                <div class="col s12 #ab47bc purple lighten-1 center-align white-text flow-text" id="conversion">1 &#8377; = 1 &#8377;</div><br><br>
+                <div class="col s12 #ab47bc purple lighten-1 center-align white-text flow-text" id="conversion">1
+                    &#8377; = 1 &#8377;</div><br><br>
 
                 <a href="#" id="indian" class="col s4 center-align butn activeLink"
                     style="padding: 5px;border-radius:10px;">
